# event-manager-backend

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: publish.yml
migrations/2020-03-26-130448_create_location/: up.sql
migrations/2020-03-26-131059_create_organizer/: down.sql  up.sql
migrations/2020-03-26-131426_create_event/: up.sql
migrations/2020-04-18-090905_create_tags/: up.sql
migrations/2020-04-18-093956_create_event_tags/: down.sql  up.sql
src/: lib.rs  main.rs  routes.rs
src/database/: event.rs  event_tag.rs  location.rs  mock.rs  mod.rs  organizer.rs  schema.rs  tag.rs
src/graphql/: graphqli64.rs  mod.rs  schema.rs
src/graphql/inputs/: event.rs  location.rs  mod.rs  organizer.rs  tag.rs
src/graphql/queries/: event.rs  location.rs  mod.rs  organizer.rs  tag.rs
src/models/: event.rs  mod.rs  tag.rs
