[package]
name = "event_manager"
version = "0.1.0"
authors = ["Torben Carstens <github@carstens.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["chrono", "postgres"], default_features = false }
chrono = "0.4.11"
derive_builder = "0.9.0"
rand = "0.7.3"
rocket = { version = "0.4.4", default-features = false }
juniper = { version = "0.14.2", features = ["serde_json"] }
juniper_rocket = "0.5.2"
serde = { version = "1.0.105", features = ["derive"] }
rocket_http = { version = "0.4.4", default-features = false }
rocket_contrib = { version = "0.4.2", features = ["diesel_postgres_pool"], default-features = false }
url = "2.1.1"
